--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -4,12 +4,24 @@
   border-radius: 16px;
   /* border: 4px solid black; */
   margin: 10px 15px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: rgba(169, 211, 233, 0.55) 0px 5px 15px;
+  /* box-shadow: rgba(169, 211, 233, 0.4) 0px 2px 4px, rgba(169, 211, 233, 0.3) 0px 7px 13px -3px, rgba(169, 211, 233, 0.2) 0px -3px 0px inset; */
 }
-.Card-container figure{
+
+.Card-container-dm{
+  max-width: 300px;
+  min-height: 500px;
+  border-radius: 16px;
+  /* border: 4px solid black; */
+  margin: 10px 15px;
+  background-color: #404040;
+  box-shadow: rgba(169, 211, 233, 0.55) 0px 5px 15px;
+  /* box-shadow: rgba(169, 211, 233, 0.4) 0px 2px 4px, rgba(169, 211, 233, 0.3) 0px 7px 13px -3px, rgba(169, 211, 233, 0.2) 0px -3px 0px inset; */
+}
+figure{
   margin: auto;
 }
-.Card-container figure img{
+figure img{
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
 }
@@ -19,4 +31,17 @@
 }
 .Card--info {
   font-size: 18px;
+}
+
+.Card-container-dm .Card--name {
+  font-weight: 500;
+  font-size: 20px;
+  color: #95f3f2;
+}
+.Card-container-dm .Card--info {
+  font-size: 18px;
+  color: white;
+}
+.Card--info b{
+  color: #1a9542;
 }
