--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -4,6 +4,7 @@
   border-radius: 16px;
   /* border: 4px solid black; */
   margin: 10px 15px;
+  background-color: #95f3f2;
   box-shadow: rgba(169, 211, 233, 0.55) 0px 5px 15px;
   /* box-shadow: rgba(169, 211, 233, 0.4) 0px 2px 4px, rgba(169, 211, 233, 0.3) 0px 7px 13px -3px, rgba(169, 211, 233, 0.2) 0px -3px 0px inset; */
 }
