[update] favorite button styles

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -41,14 +41,24 @@ figure img{
   color: #1a9542;
 }
 .Card--button{
-  background-color: #1a9542;
   margin-bottom: 15px;
   padding: 5px 10px;
   border: none;
   border-radius: 5px;
   font-weight: bold;
 }
-.Card--button:hover{
+.Card-on{
+  background-color: #1a9542;
+}
+.Card-off{
   background-color: black;
   color: #95f3f2;
+}
+.Card-on:hover{
+  background-color: black;
+  color: #95f3f2;
+}
+.Card-off:hover{
+  background-color: #1a9542;
+  color: black;
 }
