--- a/src/components/Character.css
+++ b/src/components/Character.css
@@ -2,4 +2,16 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  flex-direction: column;
+}
+.Characters-FavList{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.Character-container{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
